# LVFlow

./: .gitignore  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  testnb.ipynb
app/: db.py  jobs.py  main.py  models.py  schemas.py  services.py
app/routers/: health.py  ingest.py  web.py
app/templates/: base.html  index.html
app/templates/offers/: detail.html  list.html
app/templates/partials/: ingest_result.html  job_status.html
app/utils/: extraction.py
notebooks/: testnb.ipynb
