[project]
name = "pool-bootstrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "greenlet>=3.2.4",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
]
